@@ -241,17 +241,42 @@ class TestAuthTktCookiePlugin(unittest.TestCase):
                            'auth_tkt="%s"; Path=/; Domain=.localhost'
                             % new_val))
 
-    def test_remember_creds_different_with_nonstring_tokens(self):
+    def test_remember_creds_different_with_tokens(self):
         plugin = self._makeOne('secret')
         old_val = self._makeTicket(userid='userid')
         environ = self._makeEnviron({'HTTP_COOKIE':'auth_tkt=%s' % old_val})
-        new_val = self._makeTicket(userid='other',
+        new_val = self._makeTicket(userid='userid',
                                    userdata='userdata',
-                                   tokens='foo,bar',
+                                   tokens=['foo', 'bar'],
                                   )
-        result = plugin.remember(environ, {'repoze.who.userid': 'other',
+        result = plugin.remember(environ, {'repoze.who.userid': 'userid',
                                            'userdata': 'userdata',
                                            'tokens': ['foo', 'bar'],
+                                          })
+        self.assertEqual(len(result), 3)
+        self.assertEqual(result[0],
+                         ('Set-Cookie',
+                          'auth_tkt="%s"; Path=/' % new_val))
+        self.assertEqual(result[1],
+                         ('Set-Cookie',
+                           'auth_tkt="%s"; Path=/; Domain=localhost'
+                            % new_val))
+        self.assertEqual(result[2],
+                         ('Set-Cookie',
+                           'auth_tkt="%s"; Path=/; Domain=.localhost'
+                            % new_val))
+
+    def test_remember_creds_different_with_tuple_tokens(self):
+        plugin = self._makeOne('secret')
+        old_val = self._makeTicket(userid='userid')
+        environ = self._makeEnviron({'HTTP_COOKIE':'auth_tkt=%s' % old_val})
+        new_val = self._makeTicket(userid='userid',
+                                   userdata='userdata',
+                                   tokens=['foo', 'bar'],
+                                  )
+        result = plugin.remember(environ, {'repoze.who.userid': 'userid',
+                                           'userdata': 'userdata',
+                                           'tokens': ('foo', 'bar'),
                                           })
         self.assertEqual(len(result), 3)
         self.assertEqual(result[0],
