@@ -4,6 +4,9 @@ repoze.who Changelog
 After 2.0a3 (unreleased)
 ------------------------
 
+- Fix auth_tkt plugin to not hand over tokens as strings to paste. See
+  http://lists.repoze.org/pipermail/repoze-dev/2010-November/003680.html
+
 - Avoid propagating unicode 'max_age' value into cookie headers.  See
   https://bugs.launchpad.net/bugs/674123 .
 
